--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-    {
+{
   "name": "my-app",
   "main": "client/index.js",
   "version": "1.0.0",
@@ -32,6 +32,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node-cron": "^3.0.11",
+    "axios": "^1.13.4",
     "bcryptjs": "^3.0.3",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
